Revision history for {{$dist->name}}

{{$NEXT}}
          - do not index our profiles/, to avoid its contents from showing up
            under "Documentation" on metacpan

0.001     2013-04-14 13:52:50 PDT-0700 (Karen Etheridge)
          - Initial release.
