@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
           - do not index our profiles/, to avoid its contents from showing up
             under "Documentation" on metacpan
+          - users of [@Author::ETHER] can now -remove plugins
 
 0.001     2013-04-14 13:52:50 PDT-0700 (Karen Etheridge)
           - Initial release.
